@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.502 2003-11-08 20:26:44 castaglia Exp $
+$Id: NEWS,v 1.503 2003-11-08 20:40:28 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -14,6 +14,7 @@ CVS
 - Bug 2098 - Added SetEnv and UnsetEnv configuration directives.
 - Bug 2271 - Improper autoconf check for getaddrinfo() on Tru64 UNIX 5.1.
   The getaddrinfo symbol is a macro, not a function, on that platform.
+- Bug 2255 - RADIUS Service-Type should reflect attribute expectations.
 
 1.2.9 - Released 31-Oct-2003
 ---------------------------------
